--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
+  author: Norbert Klasen
   description: 
-  company: your company (optional)
+  company: Micro Focus
   
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: license (MIT)
   
   min_ansible_version: 1.2
 
@@ -31,7 +31,7 @@ galaxy_info:
   # the ones that apply to your role. If you don't see your
   # platform on this list, let us know and we'll get it added!
   #
-  #platforms:
+  platforms:
   #- name: EL
   #  versions:
   #  - all
@@ -117,15 +117,16 @@ galaxy_info:
   #  - utopic
   #  - vivid
   #  - wily
-  #- name: SLES
-  #  versions:
+  - name: SLES
+    versions:
   #  - all
   #  - 10SP3
   #  - 10SP4
-  #  - 11
+    - 11
   #  - 11SP1
   #  - 11SP2
   #  - 11SP3
+    - 12
   #- name: GenericLinux
   #  versions:
   #  - all
@@ -139,7 +140,10 @@ galaxy_info:
   #  - squeeze
   #  - wheezy
   
-  galaxy_tags: []
+  galaxy_tags:
+    - NetIQ
+    - Sentinel
+    - Syslog 
     # List tags for your role here, one per line. A tag is
     # a keyword that describes and categorizes the role.
     # Users find roles by searching for tags. Be sure to
@@ -152,3 +156,4 @@ dependencies: []
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
+
